tests/baselines/reference/interfaceWithImplements1.errors.txt
==== tests/cases/compiler/interfaceWithImplements1.ts (5 errors) ====
    interface IFoo { }
    
    interface IBar implements IFoo {
                   ~~~~~~~~~~
!!! error TS1005: '{' expected.
                              ~~~~
!!! error TS1005: ';' expected.
                                   ~
!!! error TS1005: ';' expected.
                   ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                              ~~~~
!!! error TS2304: Cannot find name 'IFoo'.
    }